<?xml version="1.0" encoding="utf-8"?>
<com.goodwy.filemanager.fragments.NetworkFragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/network_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/network_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/network_content_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/network_header_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/network_devices_icon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/access_from_network"
                    android:src="@drawable/ic_network_vector" />

                <com.goodwy.commons.views.MyTextView
                    android:id="@+id/network_status_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bigger_margin"
                    android:gravity="center"
                    android:paddingStart="@dimen/activity_margin"
                    android:paddingEnd="@dimen/activity_margin"
                    android:text="@string/ftp_same_network_or_hotspot"
                    android:textSize="@dimen/bigger_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/network_stopped_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_margin"
                android:paddingTop="@dimen/bigger_margin"
                android:paddingEnd="@dimen/activity_margin"
                android:paddingBottom="@dimen/bigger_margin">

                <com.goodwy.commons.views.MyAppCompatCheckbox
                    android:id="@+id/network_show_hidden_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_hidden_files" />

                <com.goodwy.commons.views.MyTextView
                    android:id="@+id/network_start_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bigger_margin"
                    android:gravity="center"
                    android:text="@string/ftp_start_service_description"
                    android:textSize="@dimen/normal_text_size" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/network_start_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:text="@string/start_service"
                    app:cornerRadius="4dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/network_running_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/network_running_details_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bigger_margin"
                    android:background="@android:color/black"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/activity_margin"
                    android:paddingTop="@dimen/bigger_margin"
                    android:paddingEnd="@dimen/activity_margin"
                    android:paddingBottom="@dimen/bigger_margin">

                    <com.goodwy.commons.views.MyTextView
                        android:id="@+id/network_ftp_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <com.goodwy.commons.views.MyTextView
                        android:id="@+id/network_username_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/normal_text_size" />

                    <EditText
                        android:id="@+id/network_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center"
                        android:inputType="textNoSuggestions"
                        android:minWidth="120dp"
                        android:singleLine="true"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <com.goodwy.commons.views.MyTextView
                        android:id="@+id/network_password_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/password"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/normal_text_size" />

                    <com.goodwy.commons.views.MyTextView
                        android:id="@+id/network_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.goodwy.commons.views.MyTextView
                    android:id="@+id/network_stop_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bigger_margin"
                    android:gravity="center"
                    android:paddingStart="@dimen/activity_margin"
                    android:paddingEnd="@dimen/activity_margin"
                    android:text="@string/ftp_enter_address_description"
                    android:textSize="@dimen/normal_text_size" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/network_stop_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:text="@string/stop_service"
                    app:cornerRadius="4dp" />
            </LinearLayout>

            <com.goodwy.commons.views.MyTextView
                android:id="@+id/network_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/activity_margin"
                android:textColor="@color/red_ios"
                android:textSize="@dimen/normal_text_size"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</com.goodwy.filemanager.fragments.NetworkFragment>
