<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_last_modified_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <com.goodwy.commons.views.MyTextInputLayout
        android:id="@+id/edit_last_modified_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_modified_format">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_last_modified_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </com.goodwy.commons.views.MyTextInputLayout>

    <LinearLayout
        android:id="@+id/edit_last_modified_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/edit_last_modified_date_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/date_picker"
            android:textSize="@dimen/bigger_text_size" />

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/edit_last_modified_time_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="end"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/time_picker"
            android:textSize="@dimen/bigger_text_size" />
    </LinearLayout>
</LinearLayout>
